Producer and Consumer are completed

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,39 +1,60 @@
 version: '3'
 
 services:
-    ## The following one is for Kafka.  First Zoo keeper needs to be started
-  # zookeeper:
-  #   image: confluentinc/cp-zookeeper:latest
-  #   environment:
-  #     ZOOKEEPER_CLIENT_PORT: 2181
-  #     ZOOKEEPER_TICK_TIME: 2000
-  #   ports:
-  #     - 22181:2181
-  # ## The following one is for Kafka server. single node cluster
-  # kafka:
-  #   image: confluentinc/cp-kafka:latest
-  #   depends_on:
-  #     - zookeeper
-  #   ports:
-  #     - 29092:29092
-  #   environment:
-  #     KAFKA_BROKER_ID: 1
-  #     KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-  #     KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
-  #     KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-  #     KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-  #     KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
   ## the following are all existing ones for diabetes dataset
-  predict:
+  # predict:
+  #   deploy:
+  #     replicas: 1
+  #   build: predict
+  #   environment:
+  #     - PREDICTOR_ENDPOINT=http://predict:9990
+  #   ports:
+  #     - "9990:9990"
+  #   volumes:
+  #     - ./models:/app/models
+    ## The following one is for Kafka Producer
+  producer:
     deploy:
       replicas: 1
-    build: predict
-    environment:
-      - PREDICTOR_ENDPOINT=http://predict:9990
+    build: producer
     ports:
-      - "9990:9990"
+      - "8880:8880"
     volumes:
       - ./models:/app/models
+   ## The following one is for Kafka Consumer 
+  consumer:
+    deploy:
+      replicas: 1
+    build: consumer
+    ports:
+      - "7770:7770"
+    volumes:
+      - ./models:/app/models
+
+  ## The following one is for Kafka.  First Zoo keeper needs to be started
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - 22181:2181
+  ## The following one is for Kafka server. single node cluster
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    depends_on:
+      - zookeeper
+    ports:
+      - 29092:29092
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
   # spark-master:
   #   image: cluster-apache-spark:3.0.2
   #   build: docker-spark-cluster
